Lagt til exploraiton vs exploitation text

--- a/notebook/Reinforcement Learning with OpenAI Gym.ipynb
+++ b/notebook/Reinforcement Learning with OpenAI Gym.ipynb
@@ -181,7 +181,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploration"
+    "## Exploration vs Exploitation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Når vi trener agenten vår trenger vi en strategi som tilsier om agenten burde fortsette å ta valg som urforsker domenet, eller ta valg som utnytter valg som tidligere har gitt suksess.\n",
+    "\n",
+    "I er RL environment bruker vi en strategi som kalles \"Epsilon greedy strategy\". \n",
+    "\n",
+    "For hvert steg velger agenten en action basert på hvilken action som har høyest Q verdi for en gitt state. Men for å finne en balanse mellom exploration og expoitation bruker vi en verdi ϵ (Epsilon), som vi initielt setter til 1. ϵ gir oss sannsynligheten for at agenten vil velge å utforske dets environment fremfor å utnytte det.\n",
+    "\n",
+    "For hver episode øsnker vi at epsilon skal minske, slik at sannsynligheten for at agenten velger exporation minsker ettersom den lærer mer og mer om sitt miljø. \n",
+    "\n",
+    "Man kaller denne strategien \"greedy\" - fordi agenten helst ønsker å ta valg som gir høyest reward når det begynner å forstå hva som skjer i miljøet. For å finne ut om agenten vil gå for exploration eller expoitation (for hvert steg) velger vi et random tall mellom 0 og 1, og hvis dette tallet er større enn ϵ vil den velge expoitation. \n",
+    "\n",
+    "I praksis betyr dette at valgene er fullstendig tilfeldig i begynnelsen, men vil gradvis minske utover i treningen.\n",
+    "\n",
+    "<img src=\"resources/exploration-versus-exploitation.jpg\">"
    ]
   },
   {
@@ -1508,7 +1527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
